--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 img{
-    width: 200px;
+    width: 450px;
+    height: 350px;
+    float: left;
+    margin: 0;
+    padding: 0;
 }
 body{
     text-align: center;
