--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,46 @@
+* {
+        display: block;
+    }
+
 img{
-    width: 450px;
+    width: 50%;
     height: 350px;
     float: left;
-    margin: 10;
+}
+div{
+    width:66.67%;
+    margin-left: 16.67%;
+    margin-right:16.67%;
 }
 body{
     text-align: center;
     font-family: "Comic Sans MS";
+    color: #ff6a00;
+    background-image: radial-gradient(#C40808 0%,#000000 100%);
+    background-repeat: no-repeat;
+    min-height: 100%;
+}
+html{
+    min-height: 100%;
+}
+.element {
+  width: 100%;
+  height: 100%;
+  animation: 
+    stretch
+    1.5s
+    ease-out
+    0
+    alternate
+    infinite
+    none
+    running;
+}
+@keyframes pulse {
+  0% {
+    background-color:#C40808;
+  }
+  100%{
+      background-color: #000000
+  }
 }
