--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ div{
 body{
     text-align: center;
     font-family: "Comic Sans MS";
-    color: #c40808;
+    color: #0000ff;
     background-image: radial-gradient(#ffffff 0%,#c40808 50%,#000000 90%);
     background-repeat: no-repeat;
     min-height: 100%;
