--- a/funwithdots/style1.css
+++ b/funwithdots/style1.css
@@ -1,12 +1,17 @@
 #heading{
+    position: fixed;
     font-size:75;
-    margin-top:20%;
-    margin-left:40%;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
     opacity:.25;
 }
 #start{
+    position:fixed;
     font-size:75;
-    margin-left:46.5%;
+    top:60%;
+    left:50%;
+    transform:translate(-50%,-50%);
 }
 .hide{
     display:none;
@@ -23,4 +28,9 @@ body{
 #balls{
     height:100%;
     width:100%;
+}
+#score{
+    position:fixed;
+    top:0;
+    left:90%;
 }
