--- a/platformer/button.css
+++ b/platformer/button.css
@@ -8,3 +8,19 @@
 .hide{
     display:none;
 }
+.text1{
+    position:fixed;
+    font-size:75;
+    color: white;
+    top:43%;
+    left:50%;
+    transform:translate(-50%,-50%);
+}
+.text2{
+    position:fixed;
+    font-size:75;
+    color: white;
+    top:52%;
+    left:50%;
+    transform:translate(-50%,-50%);
+}
