--- a/collab_sketch/style.css
+++ b/collab_sketch/style.css
@@ -6,3 +6,10 @@
     margin-left:200px;
     margin-top:-200px;
 }
+body{
+    background-color: gray;
+}
+#controls{
+    margin-top:20px;
+    margin-bottom:20px;
+}
